test/lit/vpto/low_precision/vpto_low_precision_unsupported_scalar_negative.pto
// Copyright (c) 2026 Huawei Technologies Co., Ltd.
// This program is free software, you can redistribute it and/or modify it under the terms and conditions of
// CANN Open Software License Agreement Version 2.0 (the "License").
// Please refer to the License for details. You may not use this file except in compliance with the License.
// THIS SOFTWARE IS PROVIDED ON AN "AS IS" BASIS, WITHOUT WARRANTIES OF ANY KIND, EITHER EXPRESS OR IMPLIED,
// INCLUDING BUT NOT LIMITED TO NON-INFRINGEMENT, MERCHANTABILITY, OR FITNESS FOR A PARTICULAR PURPOSE.
// See LICENSE in the root of the software repository for the full text of the License.

// Guards rejection of unsupported low-precision scalar operands.
// RUN: not ptoas --pto-arch=a5 --pto-backend=vpto %s -o - 2>&1 | FileCheck %s

// CHECK: error: 'pto.vcmps' op scalar low-precision element type '!pto.hif8' is not supported by pto.vcmps yet
// CHECK-NOT: llvm.hivm.
// CHECK-NOT: v256i8
// CHECK-NOT: v256ui8

module attributes {pto.target_arch = "a5"} {
  func.func @reject_low_precision_vcmps_scalar(
      %src: !pto.vreg<128xf16>,
      %scalar: !pto.hif8,
      %mask: !pto.mask<b16>)
      attributes {pto.kernel_kind = #pto.kernel_kind<vector>} {
    pto.vecscope {
      %0 = pto.vcmps %src, %scalar, %mask, "eq" : !pto.vreg<128xf16>, !pto.hif8, !pto.mask<b16> -> !pto.mask<b16>
    }
    return
  }
}
